Fix styling on pre tags to overflow and scroll nicely

--- a/source/assets/stylesheets/normalize.css
+++ b/source/assets/stylesheets/normalize.css
@@ -156,16 +156,6 @@ samp {
 }
 
 /*
- * Improves readability of pre-formatted text in all browsers.
- */
-
-pre {
-    white-space: pre;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
-
-/*
  * Sets consistent quote types.
  */
 
