--- a/source/assets/stylesheets/syntax.scss
+++ b/source/assets/stylesheets/syntax.scss
@@ -11,6 +11,7 @@
     @include box-shadow(1px 1px 10px $light-light-gray);
     line-height: 1.3;
     margin: 10px 20px;
+    overflow: auto;
     padding: 10px 15px;
   }
 
